# policyd

./: CHANGELOG  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  UPGRADING  cbpadmin  cbpolicyd  cluebringer.conf  cluebringer.spec  config.h.in  configure  configure.ac  mysql.c  policyd.c  policyd.conf  policyd.h  policyd.spec  policyd.spec.fedora  sockets.c  throttle.c  throttle_rcpt.c  throttle_sasl.c
cbp/: config.pm  dbilayer.pm  dblayer.pm  policies.pm  protocols.pm  tracking.pm  version.pm
database/: access_control.tsql  amavis.tsql  checkhelo.tsql  checkspf.tsql  convert-tsql  core.tsql  greylisting.tsql  mysql.sql  quotas.tsql
m4/: mysql.m4
src/: Makefile.am  Makefile.in  generic.c  mysql.c  policyd.c  policyd.h  sockets.c  throttle.c  throttle_rcpt.c  throttle_sasl.c
webui/: accesscontrol-add.php  accesscontrol-change.php  accesscontrol-delete.php  accesscontrol-main.php  amavis-add.php  amavis-change.php  amavis-delete.php  amavis-main.php  checkhelo-add.php  checkhelo-blacklist-add.php  checkhelo-blacklist-change.php  checkhelo-blacklist-delete.php  checkhelo-blacklist-main.php  checkhelo-change.php  checkhelo-delete.php  checkhelo-main.php  checkhelo-whitelist-add.php  checkhelo-whitelist-change.php  checkhelo-whitelist-delete.php  checkhelo-whitelist-main.php  checkspf-add.php  checkspf-change.php  checkspf-delete.php  checkspf-main.php  greylisting-add.php  greylisting-change.php  greylisting-delete.php  greylisting-main.php  greylisting-whitelist-add.php  greylisting-whitelist-change.php  greylisting-whitelist-delete.php  index.php  (+45 more)
(+11 files in other folders)
